Fri Jun 10 22:54:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing.h: fd_set stuffs need sys/types.h.  fixed: [ruby-core:05179]

Thu Jun  9 23:58:12 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/Win32API/Win32API.c (Win32API_Call): disable global
	  optimization. fixed: [ruby-core:05143]

Thu Jun  9 23:35:22 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_inject): default the result value to Qundef to use
	  first element as initial value if not given.

Thu Jun  9 19:55:41 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (ruby_longjmp): new macro to call longjmp, setcontext, etc.
	  (ruby_setjmp): new macro to call setjmp, getcontext, etc.
	  (ruby_setjmp): call setjmp before getcontext to avoid IA64 register
	  stack problem.
	  [ruby-talk:144939]

	* gc.c (Init_stack): remove IA64_MAGIC_STACK_LIMIT.

Thu Jun  9 18:24:16 2005  Tanaka Akira  <akr@m17n.org>

	* configure.in, eval.c, gc.c: use libunwind only on HP-UX.
	  [ruby-dev:26297]

Wed Jun  8 12:25:59 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_nitems): add the block feature to Array#nitems.
	  suggested by Bertram Scharpf <lists@bertram-scharpf.de> in
	  [ruby-talk:134083].

Wed Jun  8 11:11:34 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (get2comp): revert all prior changes, and calculate
	  proper 2's complement for negative numbers.

Wed Jun  8 08:33:10 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enum.c (enum_min_by, enum_max_by): return nil if no iteration.
	  fixed: [ruby-dev:26245]

	* eval.c (rb_need_block): ensure a block is given.

	* eval.c (backtrace): skip successive frames sharing same node.

Wed Jun  8 01:27:06 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (bignorm): fixed a bug in normalizing negative numbers
	  reported from Honda Hiroki <hhonda@ipflex.com>.  normalizing
	  should not trim leading zeros from negative numbers.

	* bignum.c (rb_cstr_to_inum): must remove leading zeros for this
	  case.
